--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <title>Mateus page</title>
   </head>
   <body>
-    Hello, my name is Mateus.
+    <h1>Hello, Code School!</h1>
+    <ul>
+      <li> Node </li>
+      <li> Mongodb </li>
+      <li> Express </li>
+    </ul>
   </body>
 </html>
